# dgai-plugins

./: .gitignore  METRICS.md  ONBOARDING.md  README.md  SCOUTED.md  style-guide.md
.claude-plugin/: marketplace.json
agents/scout/: README.md  cron_setup.sh  pyproject.toml  scout.py
archive/outreach-v0/.claude-plugin/: plugin.json
artifacts/: kpi-dashboard.html  vcep-tracker.html
context/: known-contacts.yaml
examples/outreach/: 01-warm-first-touch-multi-offer.md  02-cold-ferriss-shape.md  03-second-touch-single-offer.md
notes/scout-digest/: 2026-06-09.md
output-styles/: dgai-voice.md
plugins/anti-ai-ese/.claude-plugin/: plugin.json
plugins/dgai-clingen/data/: clingen_leadership_contacts.csv  clingen_panel_index.json
plugins/dgai-clingen/mcp/: pyproject.toml
plugins/dgai-gene-brief/: README.md
plugins/dgai-gene-brief/.claude-plugin/: plugin.json
plugins/dgai-hello/commands/: dgai-hello.md
plugins/dgai-instrumentation/.claude-plugin/: plugin.json
plugins/dgai-instrumentation/hooks/: hooks.json  post-skill-log.py
plugins/dgai-outreach-package/: README.md
plugins/dgai-outreach-package/.claude-plugin/: plugin.json
plugins/dgai-outreach-package/commands/: dgai-outreach-package.md
plugins/gene-brief/: README.md
plugins/gene-brief/.claude-plugin/: plugin.json
plugins/gene-brief/examples/: ass1-gene-brief.md  otc-gene-brief.md
plugins/outreach-research/.claude-plugin/: plugin.json
plugins/vcep-research/: README.md
plugins/warm-path/: README.md
plugins/warm-path/commands/: warm-path.md
scripts/: statusline.sh  update-metrics.py
(+41 files in other folders)
