[project]
name = "dgai-scout"
version = "0.1.0"
description = "DeepGene Skill Scout — standalone Agent SDK agent"
requires-python = ">=3.10"
dependencies = [
    "claude-agent-sdk>=0.2.0",
]

[project.scripts]
dgai-scout = "scout:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
